# pybag

./: .gitignore  .pre-commit-config.yaml  BENCHMARK_RESULTS.md  BUFFERING_BENCHMARK_RESULTS.md  CYTHON_BENCHMARK_RESULTS.md  Cargo.toml  GENERATION_WORKFLOW.md  LICENSE  MESSAGE_LEVEL_ANALYSIS.md  MULTITHREADING_BENCHMARK_REPORT.md  OPTIMIZATION_REPORT.md  README.md  RUST_OPTIMIZATION_ANALYSIS.md  RUST_PERFORMANCE_REPORT.md  benchmark_direct_comparison.py  pyproject.toml  ruff.toml  setup.py  test_ast_basic.py  test_rust_cdr.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: lint.yaml  lint.yml  publish.yaml  release-tag.yaml  release.yaml
benchmarks/: benchmark_utils.py  precompile_benchmark.py  rust_comparison.py  rust_comparison_raw.py  test_alignment.py  test_alignment_comprehensive.py  test_alignment_isolated.py  test_cache_memory.py  test_cdr_primitives.py  test_chunk_cache.py  test_chunk_cache_random.py  test_chunk_cache_rereads.py  test_compiler_comparison.py  test_deserialization.py  test_file_reader_buffering.py  test_huggingface_mcap.py  test_mcap_reader.py  test_mcap_reader_decoded.py  test_mcap_reader_raw.py  test_mcap_reader_undecoded.py  test_mcap_writer.py  test_memory_usage.py  test_message_level.py  test_mmap_vs_file_reader.py  test_multithreading_merge.py  test_multithreading_read.py  test_reverse_iteration.py  test_ros1_reader_decoded.py  test_ros1_reader_raw.py  test_ros1_writer.py  test_rust_vs_python.py  test_serialization.py  test_topic_sorted_read.py  zig_vs_rust.sh
benchmarks/memory/: test_memory_usage.py
benchmarks/reading/: test_mcap_reader_decoded.py  test_mcap_reader_raw.py  test_reverse_iteration.py  test_rust_vs_python.py  test_topic_sorted_read.py
benchmarks/writing/: test_mcap_writer.py
examples/: .gitignore  README.md  compare_image_compression.py  decode_examples.py  decode_mcap.py  h264_compression.py  reencode_mcap.py  test_reencode.py
pybag-rs/: Cargo.toml  pyproject.toml
pybag-rs/benches/: mcap_comparison.rs
pybag-rs/src/: error.rs  lib.rs
pybag-rs/src/encoding/: cdr.rs  mod.rs
pybag-rs/src/io/: mod.rs  reader.rs  writer.rs
pybag-rs/src/mcap/: chunk.rs  crc.rs  mod.rs  parser.rs  reader.rs  records.rs  writer.rs  zerocopy.rs
pybag-rs/src/schema/: mod.rs  ros2msg.rs  types.rs
pybag-zig/: README.md  build.zig
pybag-zig/src/: bench.zig  ffi.zig  lib.zig  mcap.zig  mmap.zig  standalone_bench.zig
rust/src/: lib.rs  lib_msg.rs
scripts/: README.md  __init__.py  generate_messages.py  generate_ros1_messages.py  generate_ros2_messages.py  precompile_messages.py  update_version.py
src/pybag/: __init__.py  bag_reader.py  bag_writer.py  builtin_interfaces.py  compiler.py  crc.py  deserialize.py  deserialize_rust.py  geometry_msgs.py  mcap_reader.py  mcap_writer.py  message_level_deserialize.py  nav_msgs.py  reader.py  sensor_msgs.py  serialize.py  serialize_rust.py  std_msgs.py  translate.py  types.py  typestore.py
tests/: test_attachment_metadata.py  test_bug_fixes.py  test_cdr.py  test_cli_filter.py  test_cli_info.py  test_cli_merge.py  test_cli_structure.py  test_embedded_methods.py  test_encryption.py  test_mcap_crc.py  test_mcap_file_writer.py  test_mcap_reader.py  test_mcap_reader_context_manager.py  test_mcap_record_reader_cache.py  test_mcap_records.py  test_mcap_summary_reconstruction.py  test_mcap_writer.py  test_message_filter.py  test_message_validation.py  test_mmap_auto_selection.py  test_multi_mcap_reader.py  test_precompiled.py  test_protobuf.py  test_reader.py  test_ros1_profile.py  test_ros2msg_schema_parsing.py  test_summary.py  test_summary_reconstruction.py  test_translate.py  test_typestore.py  test_validate_crc.py
tests/bag/: __init__.py  test_bag_reader.py  test_bag_records.py  test_bag_roundtrip.py  test_bag_writer.py  test_ros1_md5.py  test_rosmsg.py  test_rosmsg_encoding.py
tests/cli/: test_convert.py  test_filter.py  test_info.py  test_inspect.py  test_merge.py  test_recover.py  test_sort.py  test_sort_by_topic.py  test_utils.py
tests/encoding/: test_cdr.py  test_compiler.py  test_json.py  test_json_serialization.py  (+2 more)
(+146 files in other folders)
