[project]
name = "pybag"
version = "0.1.0"
description = "A Python library to work with bag files without ROS."
readme = "README.md"
authors = [{ name = "Angus Stewart", email = "siliconlad@protonmail.com" }]
requires-python = ">=3.10"

[project.scripts]
pybag = "pybag.cli.main:main"

[project.optional-dependencies]
zstd = ["zstandard>=0.23.0"]
lz4 = ["lz4>=4.4.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
test = [
   "pytest>=8.4.1",
   "pytest-cov>=6.2.1",
]
dev = [
    "kappe>=0.19.1",
    "mcap>=1.2.2",
    "pre-commit>=4.2.0",
    "rosbags>=0.10.10",
]

[tool.isort]
multi_line_output = 3

[tool.pytest.ini_options]
addopts = "--cov=pybag"
testpaths = ["tests"]
