[project]
name = "pybag-sdk"
version = "0.5.0"
description = "A Python library to work with bag files without ROS."
readme = "README.md"
authors = [{ name = "Angus Stewart", email = "siliconlad@protonmail.com" }]
requires-python = ">=3.10"

[project.scripts]
pybag = "pybag.cli.main:main"

[project.optional-dependencies]
zstd = ["zstandard>=0.23.0"]
lz4 = ["lz4>=4.4.3"]

[build-system]
requires = ["setuptools>=61.0", "wheel", "Cython>=3.0.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
test = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-benchmark>=4.0.0",
    "mcap>=1.2.2",
    "mcap-ros2-support>=0.5.5",
    "rosbags>=0.10.10",
    "numpy>=2.2.3",
    "Cython>=3.0.0",
]

[tool.isort]
multi_line_output = 3

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
addopts = "--cov=pybag --benchmark-sort=mean"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true
